# infer-camembert

./: .gitignore  MANIFEST.in  README.md  publish.sh  pyproject.toml
src/infer-camembert/: __main__.py
src/infercamembert/: __init__.py  __main__.py  _process.py  inference.py  labels.py  parameters.py
