# pyproject.toml

[build-system]
requires = ["setuptools>=58.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infer-camembert"
version = "0.1.0"
description = "Python implementation for text classification inference with CamemBERT fine-tuned models"
readme = "README.md"
authors = [{ name = "Cyril Dever", email = "cdever@pep-s.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = [
    "ai",
    "transformers",
    "inference",
    "bert",
    "camembert",
]
dependencies = [
    "torch >= 2.1.0",
    "transformers >= 4.34.1",
]
requires-python = ">=3.10.2"

[project.urls]
Homepage = "https://github.com/cyrildever/infer-camembert"

[project.scripts]
infer-camembert = "infercamembert.__main__:main"
